--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,3 +4,14 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+/* spinner */
+
+.spinner{
+height: 100vh;
+display: flex;
+align-items: center;
+justify-content: center;
+z-index: 9999;
+background-color: bisque;
+}
