--- a/client/src/styles/LayoutStyles.css
+++ b/client/src/styles/LayoutStyles.css
@@ -69,3 +69,24 @@ margin-top: 25px;
 .active a, .active i {
     color: brown;
 }
+
+.header-content{
+    display: flex;
+    align-items: center;
+    height: 100px;
+    justify-content: flex-end;
+    margin: 0 15px;
+}
+
+.header-content i{
+    margin-right: 20px;
+    font-size: 1.3rem;
+}
+
+.header-content a{
+    text-decoration: none;
+    color: darkred;
+    margin: 0 10px;
+    text-transform: uppercase;
+    font-size: 1.3rem;
+}
